[package]
name = "shaderbg"
version = "0.1.0"
edition = "2021"

[dependencies]
tao = { version = "0.19.0", features = ["tray"] }
env_logger = "0.10.0"
image = "0.24.6"
wgpu = "0.15.0"
imgui = "0.10"
imgui-wgpu = "0.22.0"
pollster = "0.3.0"
clap = { version = "4.2.4", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18"
rand = "0.8.5"
futures-intrusive = "0.5.0"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24"
objc = "0.2.2"
