[workspace]
resolver = "2"

members = [
    "shaderbg",
    "shaderbg-render",
    "shaderbg-web"
]

[workspace.dependencies]
egui = "0.22.0"
clap = { version = "4.2.4", features = ["derive"] }
log = "0.4"
pollster = "0.3.0"
raw-window-handle = "0.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.3"