[package]
name = "shaderbg-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.16.1", features = ["glsl"] }
cgmath = "0.18"
clap = { workspace = true }
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
rand = "0.8.5"
hex_color = "2.0.0"
naga = "0.12.0"
raw-window-handle = "0.5"
log = { workspace = true }

