[package]
name = "shaderbg-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shaderbg-render = { version = "0.1.0", path="../shaderbg-render"}
winit = "0.28.6"
getrandom = { version = "0.2", features = ["js"] }
log = { workspace = true }
web-time = "0.2.0"
egui = { workspace = true }
egui-winit = { version = "0.22.0", default-features=false, features = ["links", "wayland"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
pollster = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
console_log = "1"
console_error_panic_hook = "0.1.7"
wgpu = { version = "0.15.0", features = ["glsl"] }

[target.'cfg(target_family = "wasm")'.dependencies.web_sys]
package = "web-sys"
version = "0.3.22"
features = [
    'console',
    'CssStyleDeclaration',
    'Document',
    'DomRect',
    'Element',
    'Event',
    "EventListenerOptions",
    'EventTarget',
    'FocusEvent',
    'HtmlCanvasElement',
    'HtmlElement',
    'KeyboardEvent',
    'MediaQueryList',
    'Node',
    'PointerEvent',
    'Window',
    'WheelEvent'
]