[package]
name = "shaderbg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shaderbg-render = { version = "0.1.0", path="../shaderbg-render"}
egui = {workspace = true}
tao = { version = "0.20.0", features = ["tray"] }
clap = { workspace = true }
env_logger = "0.10.0"
image = "0.24.6"
pollster = { workspace = true }
raw-window-handle = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
chrono = { version = "0.4.24", features = ["serde"] }
toml = { workspace = true }
webbrowser = "0.8.10"
zip = "0.6"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24"
objc = "0.2.2"

[target."cfg(target_os = \"windows\")".dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]